--- a/app/contacts/contacts.html
+++ b/app/contacts/contacts.html
@@ -19,6 +19,8 @@
 				<input type="cancel" value="Cancel" class="btn btn-danger" ng-click="hide(); hideContact()">
 			</div>
 		</div>
+
+		<!--Add contact-->
 		<form ng-submit="addFormSubmit()" ng-show="addFormShow">
 			<h3>Add Contact</h3>
 			<div class="row">
@@ -84,6 +86,77 @@
 			<vid class="row">
 				<div class="col-md-6">
 					<input type="submit" value="Add Contact" class="btn btn-primary">
+					<input type="cancel" value="Cancel" class="btn btn-danger" ng-click="hide()">
+				</div>
+			</vid>
+		</form>
+
+		<!--Edit contact-->
+		<form ng-submit="editFormSubmit()" ng-show="editFormShow">
+			<h3>Edit Contact</h3>
+			<div class="row">
+				<div class="col-md-6">
+					<label>Name:
+						<input type="text" ng-model="name" placeholder="Contact Name" required/>
+					</label>
+				</div>
+				<div class="col-md-6">
+					<label>Email:
+						<input type="email" ng-model="email" placeholder="Contact Email" required/>
+					</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<label>Company:
+						<input type="text" ng-model="company" placeholder="Company Name"/>
+					</label>
+				</div>
+				<div class="col-md-6">
+					<label>Work Phone:
+						<input type="number" ng-model="work_phone" placeholder="Work Phone"/>
+					</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<label>Mobile Phone:
+						<input type="number" ng-model="mobile_phone" placeholder="Mobile Phone"/>
+					</label>
+				</div>
+				<div class="col-md-6">
+					<label>Home Phone:
+						<input type="number" ng-model="home_phone" placeholder="Home Phone"/>
+					</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<label>Street Address:
+						<input type="text" ng-model="street_address" placeholder="Street Address"/>
+					</label>
+				</div>
+				<div class="col-md-6">
+					<label>City:
+						<input type="text" ng-model="city" placeholder="City"/>
+					</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<label>State:
+						<input type="text" ng-model="state" placeholder="State" />
+					</label>
+				</div>
+				<div class="col-md-6">
+					<label>Zip:
+						<input type="number" ng-model="zip" placeholder="Zip" />
+					</label>
+				</div>
+			</div>
+			<vid class="row">
+				<div class="col-md-6">
+					<input type="submit" value="Update Contact" class="btn btn-primary">
 					<input type="cancel" value="Cancel" class="btn btn-danger" ng-click="hide()">
 				</div>
 			</vid>
